--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@ function updateCart() {
     });
     cartTotal.innerText = total;
 }
+    // حذف منتج من السلة
+function removeFromCart(index) {
+    cart.splice(index, 1);
+    updateCart();
+}
 
 // إرسال الطلب (JSON Bin)
 document.getElementById('order-form').addEventListener('submit', async function(e){
@@ -212,8 +217,8 @@ document.getElementById('order-form').addEventListener('submit', async function(
     };
 
     try {
-        const BIN_ID = "PUT_YOUR_BIN_ID_HERE";
-        const ACCESS_KEY = "PUT_YOUR_ACCESS_KEY_HERE";
+        const BIN_ID = "691077dcae596e708f4e1c1f";
+        const ACCESS_KEY = "$2a$10$bxxlxssPwJVBtychZmwPU.YXXXEHOOu6Y8LaHu1x8jGsTFlz/es7.";
 
         const response = await fetch(`https://api.jsonbin.io/v3/b/${BIN_ID}`, {
             method: 'PUT',
@@ -240,3 +245,4 @@ document.getElementById('order-form').addEventListener('submit', async function(
 
 </body>
 </html>
+
